<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_edit_beacons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.reveldigital.revelmanagervirtualbeacon.Activities.create_edit_beacons">

    <ViewSwitcher
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/dialogSwitch"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="185dp"
                    android:layout_height="212dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ad_hawk_mascot"
                    android:scaleType="fitCenter"
                    android:onClick="imageClick" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/cardBackground"
            android:layout_height="212dp"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar2"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </ViewSwitcher>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="210dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText12"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_marginBottom="5dp"
                android:text="General" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/name"
                    android:layout_weight="1"
                    android:hint="Beacon Name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:ems="10"
                    android:id="@+id/editText7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp"  />

                <Spinner
                    android:layout_width="214dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/type"
                    android:entries="@array/type"
                    android:dropDownWidth="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="Location"
                android:ems="10"
                android:id="@+id/editText11"
                android:textAlignment="viewStart"
                android:textStyle="normal|bold"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Address:"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/address"
                    android:hint="Beacon Address" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="City:"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp" />



                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/city"
                    android:hint="Beacon City" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="State:"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/state"
                    android:hint="Beacon State" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Postal Code"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/postal_code"
                    android:hint="Postal Code" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:text="Country:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_weight="1"
                    android:id="@+id/country"
                    android:hint="Beacon Country" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rel">

        <ViewSwitcher
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonProgress">

            <Button
                android:layout_gravity="center"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_edit"
                android:onClick="save_edit_beacon"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Working..."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBarButton"
                    android:layout_gravity="center"
                    android:focusable="false"
                     />

            </LinearLayout>

        </ViewSwitcher>


    </RelativeLayout>

</LinearLayout>
